service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: dev
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
